syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "BrassLoon.Interface.WorkTask.Protos";

service WorkTaskCommentService {
	rpc GetAll(GetAllWorkTaskCommentsRequest) returns (stream Comment);
    rpc Create(stream CreateWorkTaskCommentRequest) returns (stream Comment);
}

message GetAllWorkTaskCommentsRequest {
    string DomainId = 1;
    string WorkTaskIdId = 2;
}

message CreateWorkTaskCommentRequest {
    string WorkTaskId = 1;
    Comment Comment = 2;
}

message Comment {
	string CommentId = 1;
    string DomainId = 2;
    google.protobuf.StringValue Text = 3;
    google.protobuf.Timestamp CreateTimestamp = 4;
}